# LinksManifold

./: .gitignore  CMakeLists.txt  README.md  lines.py  main.cpp
SymbolicCalculation/: main.py  manifold.py
include/core/: coordinate.h  manifold.h  tensor.h
include/glad/: glad.h
include/renderer/: object.h  ray.h  renderer.h
src/: glad.c
src/core/: coordinate.cpp
src/renderer/: renderer.cpp
